# galacticwrestling

./: .gitignore  README.md  constants.py  pyproject.toml  user_interactions.py  utils.py  wrestle.py
data/: cards.json  classes.json  phases.json
docs/: README.md  design-patterns.md  game.md  setup-and-run.md  testing-and-coverage.md
docs/plans/: 01-user-signup-and-wrestler-creation.md  02-ai-opponents-single-player.md  03-single-player-match-flow-and-engine.md  04-match-integration-and-remaining-systems.md  README.md
scripts/: bootstrap.sh  run-tests.sh
src/galactic_wrestling/: __init__.py  __main__.py  ai_opponents.py  app.py  auth.py  cards.py  config.py  gimmicks.py  models.py  storage.py
src/galactic_wrestling/match/: __init__.py  __main__.py  ai_policy.py  card_stats.py  deck_builder.py  engine.py  model.py  presets.py
src/galactic_wrestling/ui/: __init__.py  screens.py  wrestler_list_ids.py
tests/: conftest.py  test_ai_opponents.py  test_ai_policy.py  test_app.py  test_auth.py  test_card_stats.py  test_cards.py  test_config.py  test_deck_builder.py  test_gimmicks.py  test_match_engine.py  test_models.py  test_storage.py  test_wrestler_list_ids.py
wrestlers/: chuck.uw
